--- a/frontend/src/app/modules/main/calendar/calendar-grid-row-cell-desktop/calendar-grid-row-cell-desktop-expense-item/calendar-grid-row-cell-desktop-expense-item.component.html
+++ b/frontend/src/app/modules/main/calendar/calendar-grid-row-cell-desktop/calendar-grid-row-cell-desktop-expense-item/calendar-grid-row-cell-desktop-expense-item.component.html
@@ -1,8 +1,13 @@
 <div class="expense-overlay" [style.background-color]="expense.category?.color ?? UNCATEGORIZED_COLOR"></div>
-<div class="expense-category" [style.background-color]="expense.category?.color ?? UNCATEGORIZED_COLOR"></div>
-<div class="expense-label ml-1 text-truncate">
+
+<div class="expense-category"
+     [style.border-color]="expense.category?.color ?? UNCATEGORIZED_COLOR"
+     [style.background-color]="expense.confirmed ? (expense.category?.color ?? UNCATEGORIZED_COLOR) : undefined"></div>
+
+<div class="expense-label text-truncate">
     {{ expense.label }}
 </div>
+
 <div class="expense-amount">
     <small class="me-2">{{ expense.amount | shortNumber }}</small>
 </div>
