--- a/frontend/src/app/modules/main/main.component.html
+++ b/frontend/src/app/modules/main/main.component.html
@@ -3,7 +3,8 @@
     <nb-layout-header fixed>
         <app-header
             [calendar]="mainService.calendar"
-            [(selectedDate)]="mainService.selectedValue">
+            [monthBalance]="mainService.monthBalance"
+            [(selectedValue)]="mainService.selectedValue">
         </app-header>
     </nb-layout-header>
 
