--- a/frontend/src/app/modules/main/calendar/calendar-grid-row-cell-mobile/calendar-grid-row-cell-mobile.component.html
+++ b/frontend/src/app/modules/main/calendar/calendar-grid-row-cell-mobile/calendar-grid-row-cell-mobile.component.html
@@ -1,5 +1,5 @@
-<div class="cell p-1 h-100 text-right">
-    <div class="d-flex align-items-center justify-content-end mb-2">
+<div class="cell pe-1 text-right">
+    <div class="d-flex align-items-center justify-content-end mb-1">
         <div *ngIf="hasUnconfirmedExpenses" class="unconfirmed-expenses me-2"></div>
         <strong>{{ day }}</strong>
     </div>
