--- a/frontend/src/app/modules/main/calendar/calendar-grid-row-cell-mobile/calendar-grid-row-cell-mobile.component.scss
+++ b/frontend/src/app/modules/main/calendar/calendar-grid-row-cell-mobile/calendar-grid-row-cell-mobile.component.scss
@@ -9,13 +9,20 @@
     transition: opacity 1s;
 }
 
-:host.selected .cell {
+:host.selected {
     color: nb-theme(color-info-500);
-    border-right: 1px solid nb-theme(color-info-500);
+
+    .cell {
+        border-right: 1px solid nb-theme(color-info-500);
+    }
 
     .unconfirmed-expenses {
         border-color: nb-theme(color-info-500);
     }
+}
+
+.cell {
+    border-right: 1px solid transparent;
 }
 
 strong {
