--- a/frontend/src/app/modules/main/dialogs/profile-dialog/profile-dialog.component.html
+++ b/frontend/src/app/modules/main/dialogs/profile-dialog/profile-dialog.component.html
@@ -9,13 +9,13 @@
         </nb-card-header>
         <nb-card-body>
             <div class="mb-3">
-                <input nbInput fullWidth type="password" maxlength="255" id="current-password" placeholder="Current password" />
+                <input nbInput fullWidth required type="password" maxlength="255" id="current-password" placeholder="Current password" />
             </div>
             <div class="mb-3">
-                <input nbInput fullWidth type="password" minlength="8" maxlength="255" id="new-password-1" placeholder="New password" />
+                <input nbInput fullWidth required type="password" minlength="8" maxlength="255" id="new-password-1" placeholder="New password" />
             </div>
             <div class="mb-0">
-                <input nbInput fullWidth type="password" minlength="8" maxlength="255" id="new-password-2" placeholder="Confirm new password" />
+                <input nbInput fullWidth required type="password" minlength="8" maxlength="255" id="new-password-2" placeholder="Confirm new password" />
             </div>
         </nb-card-body>
         <nb-card-footer class="text-right">
