--- a/frontend/src/theme.scss
+++ b/frontend/src/theme.scss
@@ -21,6 +21,7 @@ $nb-themes: nb-register-theme(
                     color-primary-700: #26254c,
                     color-primary-800: #212043,
                     color-primary-900: #1c1c39,
+                    sidebar-width: 24rem,
                 ),
                 expensave,
                 default
