--- a/frontend/src/app/modules/main/calendar/calendar-expense-list-mobile/calendar-expense-list-mobile.component.scss
+++ b/frontend/src/app/modules/main/calendar/calendar-expense-list-mobile/calendar-expense-list-mobile.component.scss
@@ -6,5 +6,7 @@ button.create-expense {
     right: 30px;
     border-radius: 32px !important;
     border: 3px solid nb-theme(color-basic-default-border) !important;
+    height: 64px;
+    width: 64px;
 }
 
