--- a/frontend/src/app/modules/main/sidebar/profile/profile.component.html
+++ b/frontend/src/app/modules/main/sidebar/profile/profile.component.html
@@ -1,9 +1,10 @@
-<div class="d-flex align-items-center justify-content-between p-3">
-    <nb-user [name]="user.name"
+<div class="d-flex align-items-center justify-content-between">
+    <nb-user class="w-100 text-truncate"
+             [name]="user.name"
              [picture]="user.avatar"
              [title]="user.email">
     </nb-user>
-    <div>
+    <div style="width: 80px;">
         <button nbButton ghost size="small" status="primary" (click)="showProfileDialog()">
             <nb-icon icon="person-outline"></nb-icon>
         </button>
