frontend build fix

--- a/frontend/src/app/modules/main/dialogs/statement-import-dialog/statement-import-dialog.component.html
+++ b/frontend/src/app/modules/main/dialogs/statement-import-dialog/statement-import-dialog.component.html
@@ -1,4 +1,4 @@
-<form #importForm="ngForm" (ngSubmit)="onSubmit($event)">
+<form #importForm="ngForm" (ngSubmit)="onSubmit()">
     <nb-card [nbSpinner]="isBusy" class="dialog">
         <nb-card-body>
             <div>
