--- a/frontend/src/app/modules/main/header/header.component.html
+++ b/frontend/src/app/modules/main/header/header.component.html
@@ -21,7 +21,7 @@
             [date]="visibleDate"
             [viewMode]="activeViewMode"
             [nbPopover]="templateRef"
-            nbPopoverTrigger="hover"
+            nbPopoverTrigger="noop"
             nbPopoverPlacement="bottom"
             (changeMode)="changeViewMode()">
         </nb-calendar-view-mode>
