--- a/frontend/src/app/modules/main/main.component.html
+++ b/frontend/src/app/modules/main/main.component.html
@@ -17,6 +17,7 @@
             [expenses]="mainService.expenses"
             [balances]="mainService.balances"
             [visibleDate]="mainService.visibleDate"
+            [selectedDate]="mainService.visibleDate"
             (rangeChange)="onRangeChange($event)"
             [isMobile]="isMobile">
         </app-calendar>
