--- a/frontend/src/theme.scss
+++ b/frontend/src/theme.scss
@@ -21,6 +21,19 @@ $nb-themes: nb-register-theme(
                     color-primary-700: #26254c,
                     color-primary-800: #212043,
                     color-primary-900: #1c1c39,
+                    color-secondary-100: #66dfbe,
+                    color-secondary-200: #4ddab3,
+                    color-secondary-300: #33d5a9,
+                    color-secondary-400: #1acf9e,
+                    color-secondary-500: #00ca93,
+                    color-secondary-600: #00b684,
+                    color-secondary-700: #00a276,
+                    color-secondary-800: #008d67,
+                    color-secondary-900: #007958,
+                    link-text-color: nb-theme(color-secondary-500),
+                    link-text-hover-color: nb-theme(color-secondary-400),
+                    link-text-focus-color: nb-theme(color-secondary-600),
+                    link-text-active-color: nb-theme(color-secondary-600),
                     sidebar-width: 24rem,
                 ),
                 expensave,
