--- a/frontend/src/app/modules/main/dialogs/profile-dialog/profile-dialog.component.html
+++ b/frontend/src/app/modules/main/dialogs/profile-dialog/profile-dialog.component.html
@@ -10,24 +10,52 @@
         <nb-card-body>
             <div class="mb-3">
                 <input nbInput fullWidth required
-                       type="password" maxlength="255"
+                       #password="ngModel"
+                       type="password"
+                       [minlength]="authOptions.getConfigValue('forms.validation.password.minLength')"
+                       [maxlength]="authOptions.getConfigValue('forms.validation.password.maxLength')"
                        [(ngModel)]="passwordRequest.currentPassword"
+                       [status]="password.dirty ? (password.invalid  ? 'danger' : 'success') : 'basic'"
                        name="currentPassword"
                        placeholder="Current password" />
             </div>
             <div class="mb-3">
                 <input nbInput fullWidth required
-                       type="password" minlength="8" maxlength="255"
+                       #newPassword="ngModel"
+                       type="password"
+                       [minlength]="authOptions.getConfigValue('forms.validation.password.minLength')"
+                       [maxlength]="authOptions.getConfigValue('forms.validation.password.maxLength')"
                        [(ngModel)]="passwordRequest.newPassword"
+                       [status]="newPassword.dirty ? (newPassword.invalid  ? 'danger' : 'success') : 'basic'"
                        name="newPassword"
                        placeholder="New password" />
+                <ng-container *ngIf="password.invalid && password.touched ">
+                    <p class="caption status-danger" *ngIf="password.errors?.minlength || password.errors?.maxlength">
+                        Password should contain
+                        from {{ authOptions.getConfigValue('forms.validation.password.minLength') }}
+                        to {{ authOptions.getConfigValue('forms.validation.password.maxLength') }}
+                        characters
+                    </p>
+                </ng-container>
             </div>
             <div class="mb-0">
                 <input nbInput fullWidth required
-                       type="password" minlength="8" maxlength="255"
+                       #confirmPassword="ngModel"
+                       type="password"
+                       [minlength]="authOptions.getConfigValue('forms.validation.password.minLength')"
+                       [maxlength]="authOptions.getConfigValue('forms.validation.password.maxLength')"
                        [(ngModel)]="passwordRequest.confirmPassword"
+                       [status]="confirmPassword.dirty ? (confirmPassword.invalid  ? 'danger' : 'success') : 'basic'"
                        name="confirmPassword"
                        placeholder="Confirm new password" />
+                <ng-container *ngIf="password.invalid && password.touched ">
+                    <p class="caption status-danger" *ngIf="password.errors?.minlength || password.errors?.maxlength">
+                        Password should contain
+                        from {{ authOptions.getConfigValue('forms.validation.password.minLength') }}
+                        to {{ authOptions.getConfigValue('forms.validation.password.maxLength') }}
+                        characters
+                    </p>
+                </ng-container>
             </div>
         </nb-card-body>
         <nb-card-footer class="text-right">
