--- a/frontend/src/app/modules/main/dialogs/categories-dialog/category-edit/category-edit.component.html
+++ b/frontend/src/app/modules/main/dialogs/categories-dialog/category-edit/category-edit.component.html
@@ -10,9 +10,18 @@
         <nb-card-body>
             <div class="d-flex align-items-center mb-3">
                 <nb-icon icon="radio-button-on" class="flex-shrink-0 me-3" [style.color]="category.color"></nb-icon>
-                <div class="flex-fill">
+                <div>
                     <input type="hidden" required [(ngModel)]="category.color" name="color" />
-                    <input nbInput fullWidth maxlength="255" required placeholder="Category name" [(ngModel)]="category.name" name="name" />
+                    <nb-form-field>
+                        <nb-icon nbPrefix icon="pricetags-outline"></nb-icon>
+                        <input
+                            #categoryName="ngModel"
+                            nbInput fullWidth
+                            maxlength="255" required
+                            placeholder="Category name"
+                            [(ngModel)]="category.name" name="name"
+                            [status]="categoryName.dirty ? (categoryName.invalid  ? 'danger' : 'success') : 'basic'" />
+                    </nb-form-field>
                 </div>
             </div>
             <div class="color-picker">
